# bridgehub

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_READY.md  FIXES_APPLIED.md  Idea.md  TESTING.md  TESTING_COMPLETED.md  alembic.ini  docker-compose.dev.yml  package-lock.json  package.json  vercel.json
.speckit/: constitution.md  plan.md  spec.md
alembic/: env.py
alembic/versions/: cd2e22a00ad9_initial_migration.py
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/api_v1/: api.py
apps/api/app/api/api_v1/endpoints/: events.py  organizations.py  players.py  results.py
apps/api/app/core/: config.py
apps/api/app/db/: init_db.py  session.py
apps/api/app/models/: bridge.py  event.py  organization.py  player.py  result.py
apps/api/app/schemas/: event.py  organization.py  player.py  result.py
apps/web/: .env.production  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: navigation.tsx  providers.tsx
apps/web/src/components/dashboard/: dashboard-stats.tsx  recent-events.tsx  top-players.tsx
apps/web/src/components/ui/: loading-spinner.tsx
apps/web/src/lib/: api.ts
docs/: bridge_platform_spec.md  data_validation_scripts.md  database_migration_plan.md  development_roadmap.md  import_export_utilities.md  performance_benchmarking.md  pianola_import_utility.md
scripts/: seed-database.py  setup-dev.sh  test-api.py  test-integration.sh
